fix(buckets-ui): date-time stamp overflow

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -49,7 +49,7 @@
 
 .Bucket__created {
   width: 25%;
-  min-width: 200px;
+  min-width: 230px;
 }
 
 .Bucket__menu {
